HelloUltraviolet/Fixtures/RejectedSource/Comptime/QuoteOutsideComptime/Expected.uv
//! Expected diagnostic metadata for the QuoteOutsideComptime rejected-source specimen.

expectedDiagnostic("E-CTE-0221", "requirement.22.QuoteCompileTimeOnly")
expectedDiagnostic("E-CTE-0221", "diagnostics.22.QuoteSpliceEmissionDiagnosticsReference")
